wallet list added

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@popperjs/core": "^2.11.8",
     "@types/lodash": "^4.17.4",
+    "@types/react-modal": "^3.16.3",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "classnames": "^2.5.1",
@@ -32,6 +33,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.1",
+    "react-modal": "^3.16.1",
     "react-modal-video": "^2.0.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.23.1",
