--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@coinbase/wallet-sdk": "^4.0.3",
     "@covalenthq/client-sdk": "^1.0.2",
     "@emailjs/browser": "^4.3.3",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
@@ -17,13 +18,16 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.1",
     "@hookform/resolvers": "^3.3.4",
+    "@metamask/sdk": "^0.20.5",
     "@popperjs/core": "^2.11.8",
     "@types/lodash": "^4.17.4",
     "@types/react-modal": "^3.16.3",
+    "@walletconnect/client": "^1.8.0",
+    "@walletconnect/qrcode-modal": "^1.8.0",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "classnames": "^2.5.1",
-    "ethers": "^6.12.1",
+    "ethers": "^6.13.0",
     "isotope-layout": "^3.0.6",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
@@ -44,6 +48,7 @@
     "reactstrap": "^9.2.2",
     "sass": "^1.77.1",
     "slick-carousel": "^1.8.1",
+    "web3": "^4.9.0",
     "wowjs": "^1.1.3",
     "yup": "^1.4.0"
   },
