--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "reactstrap": "^9.2.2",
     "sass": "^1.77.1",
     "slick-carousel": "^1.8.1",
+    "uuid": "^10.0.0",
     "web3": "^4.9.0",
     "wowjs": "^1.1.3",
     "yup": "^1.4.0"
