--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/react-dom": "^18",
     "@types/react-modal-video": "^1.2.3",
     "@types/react-slick": "^0.23.13",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "typescript": "^5"
